electronics-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: electronics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: electronics
  template:
    metadata:
      labels:
        app: electronics
    spec:
      containers:
      - name: electronics
        image: 058264536857.dkr.ecr.us-east-1.amazonaws.com/electronics:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: electronics-service
spec:
  selector:
    app: electronics
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
