home-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
      - name: home
        image: 319197018462.dkr.ecr.us-west-2.amazonaws.com/home:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
