mobiles-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobiles-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
    app: mobiles
  template:
    metadata:
      labels:
        app: mobiles
    spec:
      containers:
      - name: mobiles
        image: 058264536857.dkr.ecr.us-east-1.amazonaws.com/mobiles:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mobiles-service
spec:
  selector:
    app: mobiles
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
