ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
      - path: /mobiles(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mobiles-service
            port:
              number: 80
      - path: /tvs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tvs-service
            port:
              number: 80
      - path: /electronics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: electronics-service
            port:
              number: 80
      - path: /fashion(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fashion-service
            port:
              number: 80
      - path: /homefurniture(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: homefurniture-service
            port:
              number: 80
      - path: /beautytoys(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: beautytoys-service
            port:
              number: 80
